Add todo update endpoint implementation
