# docs/swagger.yaml
@@ -1,6 +1,6 @@
 basePath: /api/v1
 consumes:
-  - application/json
+- application/json
 definitions:
   CreateTodoRequest:
     description: Create a todo request
@@ -12,8 +12,8 @@ definitions:
         type: string
         x-go-name: Name
     required:
-      - name
-      - description
+    - name
+    - description
     type: object
     x-go-package: _/C_/Users/MarceloDoz/Documents/Go/todo-api-golang/internal/todo
   CreateTodoResponse:
@@ -31,6 +31,20 @@ definitions:
         x-go-name: Name
     type: object
     x-go-package: _/C_/Users/MarceloDoz/Documents/Go/todo-api-golang/internal/todo
+  UpdateTodoRequest:
+    description: Update a todo request
+    properties:
+      description:
+        type: string
+        x-go-name: Description
+      name:
+        type: string
+        x-go-name: Name
+    required:
+    - name
+    - description
+    type: object
+    x-go-package: _/C_/Users/MarceloDoz/Documents/Go/todo-api-golang/internal/todo
 host: localhost:8080
 info:
   description: Documentation for Todo API
@@ -43,47 +57,71 @@ paths:
       operationId: Todos
       responses:
         "200":
-          $ref: "#/responses/GetTodosResponse"
+          $ref: '#/responses/GetTodosResponse'
       summary: Returns a list of todos
       tags:
-        - Todos
+      - Todos
     post:
       description: Create a new todo in a database
       operationId: createTodoRequestWrapper
       parameters:
-        - in: body
-          name: Body
-          required: true
-          schema:
-            $ref: "#/definitions/CreateTodoRequest"
+      - in: body
+        name: Body
+        required: true
+        schema:
+          $ref: '#/definitions/CreateTodoRequest'
       responses:
         "201":
-          $ref: "#/responses/CreateTodoResponse"
+          $ref: '#/responses/CreateTodoResponse'
         "422":
-          $ref: "#/responses/errorResponseWrapper"
+          $ref: '#/responses/errorResponseWrapper'
       summary: Creates a new todo
       tags:
-        - Todos
+      - Todos
   /todos/{todoId}:
     get:
       description: Returns a single todo from the database
       operationId: todoIdQueryParamWrapper
       parameters:
-        - description: The id of the todo for which the operation relates
-          format: uint64
-          in: path
-          name: todoId
-          required: true
-          type: integer
-          x-go-name: ID
+      - description: The id of the todo for which the operation relates
+        format: uint64
+        in: path
+        name: todoId
+        required: true
+        type: integer
+        x-go-name: ID
       responses:
         "200":
-          $ref: "#/responses/GetTodoByIdResponse"
+          $ref: '#/responses/GetTodoByIdResponse'
       summary: Returns a single todo
       tags:
-        - Todos
+      - Todos
+    patch:
+      description: Update a new todo in a database
+      operationId: updateTodoRequestWrapper
+      parameters:
+      - description: The id of the todo for which the operation relates
+        format: uint64
+        in: path
+        name: todoId
+        required: true
+        type: integer
+        x-go-name: ID
+      - in: body
+        name: Body
+        required: true
+        schema:
+          $ref: '#/definitions/UpdateTodoRequest'
+      responses:
+        "204":
+          $ref: '#/responses/noContentResponseWrapper'
+        "422":
+          $ref: '#/responses/errorResponseWrapper'
+      summary: Update an existing todo
+      tags:
+      - Todos
 produces:
-  - application/json
+- application/json
 responses:
   CreateTodoResponse:
     description: Create a todo response
@@ -109,7 +147,7 @@ responses:
     description: List todos returns
     schema:
       items:
-        $ref: "#/definitions/CreateTodoResponse"
+        $ref: '#/definitions/CreateTodoResponse'
       type: array
   errorResponseWrapper:
     description: ""
@@ -121,7 +159,9 @@ responses:
         type: string
       type:
         type: string
+  noContentResponseWrapper:
+    description: No content is returned by this API endpoint
 schemes:
-  - http
-  - https
+- http
+- https
 swagger: "2.0"
